added my own LSB finder should work in all compilers, i dont want to mess with insane #defines for every cimpolier with its own forward scan or whatever. i didnt find any quick solution for 64 bits so i made my own, kinda.

--- a/better chess bot/better chess bot.vcxproj.filters
+++ b/better chess bot/better chess bot.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="Board movment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Boad operations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board structure.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Board movment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Board operation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
