partial work on attack counter its been a bit too long since the last commit

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -142,11 +142,13 @@
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Boad operations.cpp" />
     <ClCompile Include="Evaluation.cpp" />
+    <ClCompile Include="Move generation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board operation.h" />
     <ClInclude Include="Board structure.h" />
     <ClInclude Include="Evaluation.h" />
+    <ClInclude Include="Move generation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
