rename files this commit will NOT work, just seperating hte diffs for the next commit

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -142,16 +142,17 @@
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Boad operations.cpp" />
     <ClCompile Include="Evaluation.cpp" />
-    <ClCompile Include="Move generation.cpp" />
+    <ClCompile Include="Board generation.cpp" />
     <ClCompile Include="Move handling.cpp" />
     <ClCompile Include="Move search.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Board operation.h" />
+    <ClInclude Include="Board operations.h" />
     <ClInclude Include="Board structure.h" />
     <ClInclude Include="Evaluation.h" />
-    <ClInclude Include="Move generation.h" />
+    <ClInclude Include="Board generation.h" />
     <ClInclude Include="Move handling.h" />
+    <ClInclude Include="Move search.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
