split move to structure and prccesing I noticed one too many includes that only used the types and enums its a reasonable split I already did for the board

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Board generation.h" />
     <ClInclude Include="Move handling.h" />
     <ClInclude Include="Move search.h" />
+    <ClInclude Include="Move structure.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
