--- a/better chess bot/better chess bot.vcxproj.filters
+++ b/better chess bot/better chess bot.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="Move search.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Move structure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
