reworked board defenitions added all tile indexes and names redefined most board constants added innitial position and gamestate in a seprate header

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -152,10 +152,12 @@
     <ClInclude Include="Board structure.h" />
     <ClInclude Include="Evaluation.h" />
     <ClInclude Include="Board generation.h" />
+    <ClInclude Include="Game innitials.h" />
     <ClInclude Include="Move handling.h" />
     <ClInclude Include="Move search.h" />
     <ClInclude Include="Move structure.h" />
     <ClInclude Include="Position generation.h" />
+    <ClInclude Include="Tile structure.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
