--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Attack detection.cpp" />
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Boad operations.cpp" />
     <ClCompile Include="Evaluation.cpp" />
@@ -148,6 +149,7 @@
     <ClCompile Include="Position generation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Attack detection.h" />
     <ClInclude Include="Board operations.h" />
     <ClInclude Include="Board structure.h" />
     <ClInclude Include="Evaluation.h" />
