added a potential BoardPosition upgrade

--- a/better chess bot/better chess bot.vcxproj.filters
+++ b/better chess bot/better chess bot.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="Attack detection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Experimental structure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
