unexpectedly MASSIVE rework almost completly phased out BoardPosition in favor of the new (much more readable and shorter) SidedPosition. also fixed quite a few type/logic bugs, hopfully creating fewer in the procces.

--- a/better chess bot/better chess bot.vcxproj.filters
+++ b/better chess bot/better chess bot.vcxproj.filters
@@ -74,7 +74,7 @@
     <ClInclude Include="Attack detection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Experimental structure.h">
+    <ClInclude Include="Sided structure.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
