completed the removal of BoardPosition, FINALLY.
fixed a lot of typo-like bugs.
created new headers and support functions.
simplifed many functons due to the structure upgrade.
fixed even more bugs.
made all revelant function pointers const.

well, that took FOREVER to do.
but I think this version of the project is much better.
even ignoring all the bugs i fixed along the way, so much clearer and with fewer (is_white? :) all over the place.
finally fixing what annoyed me about all the functions handlign the position... the position itself.

most of my files each commit be [like]([https://www.google.com](https://media.tenor.com/cJRcMyUAiMcAAAAd/ah-shit-here-we-go-again-ah-shit.gif) "Ah shit, here we go again.")

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -142,25 +142,27 @@
     <ClCompile Include="Attack detection.cpp" />
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Boad operations.cpp" />
+    <ClCompile Include="Position structure.cpp" />
     <ClCompile Include="Evaluation.cpp" />
     <ClCompile Include="Board generation.cpp" />
     <ClCompile Include="Move handling.cpp" />
     <ClCompile Include="Move search.cpp" />
     <ClCompile Include="Position generation.cpp" />
+    <ClCompile Include="Board structure.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Attack detection.h" />
     <ClInclude Include="Board operations.h" />
-    <ClInclude Include="Board structure.h" />
+    <ClInclude Include="Position structure.h" />
     <ClInclude Include="Evaluation.h" />
     <ClInclude Include="Board generation.h" />
-    <ClInclude Include="Sided structure.h" />
+    <ClInclude Include="Piece structure.h" />
     <ClInclude Include="Game constants.h" />
     <ClInclude Include="Move handling.h" />
     <ClInclude Include="Move search.h" />
     <ClInclude Include="Move structure.h" />
     <ClInclude Include="Position generation.h" />
-    <ClInclude Include="Tile structure.h" />
+    <ClInclude Include="Board structure.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
