--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Move structure.h" />
     <ClInclude Include="Position generation.h" />
     <ClInclude Include="Board structure.h" />
+    <ClInclude Include="Preallocation structure.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
