--- a/better chess bot/better chess bot.vcxproj.filters
+++ b/better chess bot/better chess bot.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="Piece structure.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Preallocation structure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
