First step to bit boards. outlined my ideas/plans my my approach to  the topic.

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Attack detection.h" />
     <ClInclude Include="Board operations.h" />
     <ClInclude Include="Evaluation structure.h" />
+    <ClInclude Include="Magic bit boards.h" />
     <ClInclude Include="Position structure.h" />
     <ClInclude Include="Evaluation.h" />
     <ClInclude Include="Board generation.h" />
