further work on encoding converted make/unmake functions to new format

--- a/better chess bot/better chess bot.vcxproj.filters
+++ b/better chess bot/better chess bot.vcxproj.filters
@@ -42,7 +42,7 @@
     <ClCompile Include="Position structure.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Move structure.cpp">
+    <ClCompile Include="Magic bit boards.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
