header shift consolidated types removed magic related files untill the base thing works

--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -143,7 +143,6 @@
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Bitboard.cpp" />
     <ClCompile Include="Boad operations.cpp" />
-    <ClCompile Include="Magic bit boards.cpp" />
     <ClCompile Include="Move.cpp" />
     <ClCompile Include="Position structure.cpp" />
     <ClCompile Include="Evaluation.cpp" />
@@ -158,9 +157,8 @@
     <ClInclude Include="Board operations.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Evaluation structure.h" />
-    <ClInclude Include="Move encoding.h" />
+    <ClInclude Include="MoveEncoding.h" />
     <ClInclude Include="Move.h" />
-    <ClInclude Include="Magic bit boards.h" />
     <ClInclude Include="Position structure.h" />
     <ClInclude Include="Evaluation.h" />
     <ClInclude Include="Board generation.h" />
@@ -168,8 +166,9 @@
     <ClInclude Include="Move handling.h" />
     <ClInclude Include="Move search.h" />
     <ClInclude Include="Position generation.h" />
-    <ClInclude Include="Board structure.h" />
+    <ClInclude Include="BoardConstants.h" />
     <ClInclude Include="Preallocation structure.h" />
+    <ClInclude Include="Types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
