--- a/better chess bot/better chess bot.vcxproj
+++ b/better chess bot/better chess bot.vcxproj
@@ -143,6 +143,8 @@
     <ClCompile Include="better chess bot.cpp" />
     <ClCompile Include="Bitboard.cpp" />
     <ClCompile Include="Boad operations.cpp" />
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Move.cpp" />
     <ClCompile Include="Position structure.cpp" />
     <ClCompile Include="Evaluation.cpp" />
@@ -155,10 +157,13 @@
     <ClInclude Include="Attack detection.h" />
     <ClInclude Include="Bitboard.h" />
     <ClInclude Include="Board operations.h" />
+    <ClInclude Include="Board.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Evaluation structure.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="MoveEncoding.h" />
     <ClInclude Include="Move.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Position structure.h" />
     <ClInclude Include="Evaluation.h" />
     <ClInclude Include="Board generation.h" />
