--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -43,6 +43,9 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
 
+    - name: Install Visual Studio Test Platform
+      run: choco install visualstudio2022testagent -y
+
     - name: Run Tests
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: vstest.console.exe /Logger:trx ${{env.SOLUTION_FILE_PATH}}\UnitTests.dll
