--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -46,9 +46,9 @@ jobs:
     - name: Install Visual Studio Test Platform
       run: choco install visualstudio2022testagent -y
 
-    - name: Add Test Agent to PATH
-      run: $env:PATH += ";C:\Program Files (x86)\Microsoft Visual Studio\2022\TestAgent\Common7\IDE"
+    - name: Add MStest to PATH
+      run:  echo "##[add-path]C:\Program Files (x86)\Microsoft Visual Studio\2022\TestAgent\Common7\IDE"
 
     - name: Run Tests
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: MSTest.exe /testcontainer:${{env.SOLUTION_FILE_PATH}}\UnitTests.dll
+      run: MSTest64.exe /testcontainer:${{env.SOLUTION_FILE_PATH}}\UnitTests.dll
