--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -48,4 +48,4 @@ jobs:
       
     - name: Run Tests
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: '"C:\Program Files (x86)\Microsoft Visual Studio\2022\TestAgent\Common7\IDE\MSTest64.exe" /testcontainer:${{env.SOLUTION_FILE_PATH}}\UnitTests.dll'
+      run: '"C:\Program Files (x86)\Microsoft Visual Studio\2022\TestAgent\Common7\IDE\MSTest64.exe" `/testcontainer:${{env.SOLUTION_FILE_PATH}}\UnitTests.dll'
