Added CMake build option updated .gitignore to exclude build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,16 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# CMake
+/build/
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+ctest_testfile.cmake
+_deps/
+*.cmake
+!CMakeLists.txt
