--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -9,7 +9,7 @@ on: [push, pull_request]
 
 env:
   # Path to the solution file relative to the root of the project.
-  SOLUTION_FILE_PATH: .
+  SOLUTION_FILE_PATH: "better chess bot.sln"
 
   # Configuration type to build.
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
