--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -17,4 +17,6 @@ jobs:
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: msbuild /m /p:Configuration=Release /p:Platform=x64 "better chess bot.sln"
+      # Build the solution in Release mode for x64, forcing v143 toolset for CI compatibility
+      run: msbuild /m /p:Configuration=Release /p:Platform=x64 /p:PlatformToolset=v143 "better chess bot.sln"
+      # TODO: stop forcing the tool when the V145 toolset becomes available on GitHub Actions
