--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,13 +21,9 @@ jobs:
       run: msbuild /m /p:Configuration=Release /p:Platform=x64 /p:PlatformToolset=v143 "better chess bot.sln"
       # TODO: stop forcing the tool when the V145 toolset becomes available on GitHub Actions
 
-    - name: Setup VSTest Path 
+    - name: Run Unit Tests
+      working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
         $vstestPath = vswhere -latest -products * -requires Microsoft.VisualStudio.Workload.NativeDesktop -find **\vstest.console.exe
         if (-not $vstestPath) { throw "vstest.console.exe not found" }
-        $vstestDir = Split-Path $vstestPath
-        echo "$vstestDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
-    - name: Run Unit Tests
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: vstest.console.exe "x64\Release\UnitTests.dll"
+        & $vstestPath "x64\Release\UnitTests.dll"
