Making shorter pasta

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Run Unit Tests
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
-        $vstestPath = vswhere -latest -products * -requires Microsoft.VisualStudio.Workload.NativeDesktop -find **\vstest.console.exe | Select-Object -First 1
+        $vstestPath = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\CommonExtensions\Microsoft\TestWindow\vstest.console.exe"
+        if (-not (Test-Path $vstestPath)) {
+          $vstestPath = vswhere -latest -products * -requires Microsoft.VisualStudio.Workload.NativeDesktop -find **\vstest.console.exe | Select-Object -First 1
+        }
         if (-not $vstestPath) { throw "vstest.console.exe not found" }
         & $vstestPath "x64\Release\UnitTests.dll"
