--- a/Unit Tests/Unit Tests.vcxproj
+++ b/Unit Tests/Unit Tests.vcxproj
@@ -164,6 +164,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UnitTests.cpp" />
+    <ClCompile Include="FenParsingTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
