Added tests for move generation Fixed some bugs in generation Refactored Castling checks

--- a/Unit Tests/Unit Tests.vcxproj
+++ b/Unit Tests/Unit Tests.vcxproj
@@ -165,6 +165,7 @@
     </ClCompile>
     <ClCompile Include="UnitTests.cpp" />
     <ClCompile Include="FenParsingTests.cpp" />
+    <ClCompile Include="MoveGenerationTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
