12 move generation testing (#13)
* Added FEN string constructor for Position
Added tests for FEN constructor

* Added tests for move generation

* Fixed castling checks

--- a/Unit Tests/Unit Tests.vcxproj
+++ b/Unit Tests/Unit Tests.vcxproj
@@ -164,6 +164,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UnitTests.cpp" />
+    <ClCompile Include="FenParsingTests.cpp" />
+    <ClCompile Include="MoveGenerationTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
